feat: refator input form

--- a/notebooks/ArtificialBeeColonyANN.ipynb
+++ b/notebooks/ArtificialBeeColonyANN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0525c512-e831-4d37-a3fa-8a302950e55f",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
     "set_seed(42)\n",
     "\n",
     "# === Load Data\n",
-    "df = pd.read_csv(r\"C:\\Users\\vishn\\OneDrive\\Documents\\Machine Learning\\Vishnu_phd.csv\")\n",
+    "df = pd.read_csv(r\"resources/data.csv\")\n",
     "X = df.drop(columns=[\"FoS\", \"SeismicFoS\"]).values\n",
     "y = df[\"FoS\"].values  # Change to df[\"SeismicFoS\"].values for seismic model\n",
     "\n",
@@ -254,22 +254,6 @@
     "fig.write_html(plot_path)\n",
     "print(f\"\\n📁 Radar Plot saved to: {plot_path}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be117265-8f6e-4559-afb5-13de0ab2ef9e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85ea5b71-bd4c-4a74-af23-9f86022d136a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
