feat: realign input form

--- a/notebooks/ArtificialBeeColonyANN.ipynb
+++ b/notebooks/ArtificialBeeColonyANN.ipynb
@@ -70,7 +70,7 @@
     "import plotly.graph_objects as go\n",
     "\n",
     "# === Settings\n",
-    "output_dir = r\"C:\\Users\\vishn\\OneDrive\\Documents\\Machine Learning\\ABC_ANN\"\n",
+    "output_dir = r\"output\"\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "# === Reproducibility\n",
