--- a/notebooks/VHRP1_GeneticAlgorithm.ipynb
+++ b/notebooks/VHRP1_GeneticAlgorithm.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ba241f89-2fed-45e8-98f7-b6e6e52e67ce",
    "metadata": {},
    "outputs": [
@@ -202,14 +202,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "✅ Scaler saved to: output/ABC_ANN_Genetic_Scaler.pkl\n",
       "\n",
       "📊 Best GA-ANN Evaluation with Hyperparameters [83, 33, 92, 0.00331]\n",
-      "R2_Train: 0.993754\n",
-      "R2_Test: 0.936205\n",
-      "RMSE_Train: 0.091130\n",
-      "RMSE_Test: 0.321321\n",
-      "MAE_Train: 0.061539\n",
-      "MAE_Test: 0.214330\n"
+      "R2_Train: 0.993901\n",
+      "R2_Test: 0.936331\n",
+      "RMSE_Train: 0.090051\n",
+      "RMSE_Test: 0.321004\n",
+      "MAE_Train: 0.061673\n",
+      "MAE_Test: 0.214212\n"
      ]
     }
    ],
@@ -222,6 +223,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+    "import joblib\n",
+    "import os\n",
+    "\n",
+    "output_dir=r'output'\n",
     "\n",
     "# === Set seed for reproducibility ===\n",
     "def set_seed(seed=42):\n",
@@ -242,6 +247,10 @@
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "scaler_path = os.path.join(output_dir, \"ABC_ANN_Genetic_Scaler.pkl\")\n",
+    "joblib.dump(scaler, scaler_path)\n",
+    "print(f\"✅ Scaler saved to: {scaler_path}\")\n",
     "\n",
     "X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
     "y_train_tensor = torch.tensor(y_train, dtype=torch.float32).view(-1, 1)\n",
@@ -317,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5719b42a-4865-45bd-9a5a-d47ce4bb8878",
    "metadata": {},
    "outputs": [
@@ -327,37 +336,48 @@
      "text": [
       "\n",
       "🔄 Generation 1\n",
-      "Top individual: [62, 89, 40, 0.00708] | R² = 0.8305807564246461\n",
+      "Top individual: [94, 48, 127, 0.00355] | R² = 0.8736949148957842\n",
       "\n",
       "🔄 Generation 2\n",
-      "Top individual: [62, 33, 40, 0.00887] | R² = 0.8431348275396757\n",
+      "Top individual: [94, 48, 127, 0.00355] | R² = 0.8736949148957842\n",
       "\n",
       "🔄 Generation 3\n",
-      "Top individual: [62, 33, 40, 0.00887] | R² = 0.8431348275396757\n",
+      "Top individual: [94, 48, 127, 0.00355] | R² = 0.8736949148957842\n",
       "\n",
       "🔄 Generation 4\n",
-      "Top individual: [62, 33, 40, 0.00887] | R² = 0.8431348275396757\n",
+      "Top individual: [94, 48, 127, 0.00355] | R² = 0.8736949148957842\n",
       "\n",
       "🔄 Generation 5\n",
-      "Top individual: [62, 33, 40, 0.00887] | R² = 0.8431348275396757\n",
+      "Top individual: [94, 48, 127, 0.00355] | R² = 0.8736949148957842\n",
       "\n",
       "🔄 Generation 6\n",
-      "Top individual: [62, 33, 40, 0.00887] | R² = 0.8431348275396757\n",
+      "Top individual: [94, 48, 127, 0.00355] | R² = 0.8736949148957842\n",
       "\n",
       "🔄 Generation 7\n",
-      "Top individual: [62, 33, 40, 0.00887] | R² = 0.8431348275396757\n",
+      "Top individual: [94, 48, 127, 0.00355] | R² = 0.8736949148957842\n",
       "\n",
       "🔄 Generation 8\n",
-      "Top individual: [62, 33, 40, 0.00887] | R² = 0.8431348275396757\n",
+      "Top individual: [94, 48, 127, 0.00355] | R² = 0.8736949148957842\n",
       "\n",
       "🔄 Generation 9\n",
-      "Top individual: [62, 33, 40, 0.00887] | R² = 0.8431348275396757\n",
+      "Top individual: [94, 48, 127, 0.00355] | R² = 0.8736949148957842\n",
       "\n",
       "🔄 Generation 10\n",
-      "Top individual: [62, 33, 40, 0.00887] | R² = 0.8431348275396757\n",
+      "Top individual: [94, 48, 127, 0.00355] | R² = 0.8736949148957842\n",
       "\n",
-      "🏆 Best Overall Individual: [62, 33, 40, 0.00887]\n",
-      "✅ Best R² (Test): 0.8431348275396757\n"
+      "🏆 Best Overall Individual: [94, 48, 127, 0.00355]\n",
+      "✅ Best R² (Test): 0.8736949148957842\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'float' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 139\u001b[39m\n\u001b[32m    133\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m✅ Best R² (Test):\u001b[39m\u001b[33m\"\u001b[39m, global_best_score)\n\u001b[32m    135\u001b[39m model_save_path = os.path.join(output_dir, \u001b[33m\"\u001b[39m\u001b[33mABC_ANN_FoS_BestModel.pth\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    136\u001b[39m torch.save({\n\u001b[32m    137\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mmodel_state_dict\u001b[39m\u001b[33m'\u001b[39m: global_best,\n\u001b[32m    138\u001b[39m     \u001b[33m'\u001b[39m\u001b[33minput_dim\u001b[39m\u001b[33m'\u001b[39m: X_train.shape[\u001b[32m1\u001b[39m],\n\u001b[32m--> \u001b[39m\u001b[32m139\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mh1\u001b[39m\u001b[33m'\u001b[39m: \u001b[43mglobal_best_score\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mh1\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m,\n\u001b[32m    140\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mh2\u001b[39m\u001b[33m'\u001b[39m: global_best_score[\u001b[33m'\u001b[39m\u001b[33mh2\u001b[39m\u001b[33m'\u001b[39m],\n\u001b[32m    141\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mh3\u001b[39m\u001b[33m'\u001b[39m: global_best_score[\u001b[33m'\u001b[39m\u001b[33mh3\u001b[39m\u001b[33m'\u001b[39m],\n\u001b[32m    142\u001b[39m }, model_save_path)\n",
+      "\u001b[31mTypeError\u001b[39m: 'float' object is not subscriptable"
      ]
     }
    ],
@@ -494,7 +514,16 @@
     "\n",
     "# === Final Best Result ===\n",
     "print(\"\\n🏆 Best Overall Individual:\", global_best)\n",
-    "print(\"✅ Best R² (Test):\", global_best_score)\n"
+    "print(\"✅ Best R² (Test):\", global_best_score)\n",
+    "\n",
+    "model_save_path = os.path.join(output_dir, \"ABC_ANN_FoS_BestModel.pth\")\n",
+    "torch.save({\n",
+    "    'model_state_dict': global_best,\n",
+    "    'input_dim': X_train.shape[1],\n",
+    "    'h1': global_best_score['h1'],\n",
+    "    'h2': global_best_score['h2'],\n",
+    "    'h3': global_best_score['h3'],\n",
+    "}, model_save_path)\n"
    ]
   },
   {
@@ -615,7 +644,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -629,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
